// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CandidacyListItem /> renders status elected 1`] = `
<div
  className="candidacy-list-item"
>
  Eleito
   no 
  1
  ° turno para
   
  Vereador
   
  em Moju/PA
</div>
`;

exports[`<CandidacyListItem /> renders status non-elected 1`] = `
<div
  className="candidacy-list-item"
>
  Não eleito
   no 
  1
  ° turno para
   
  Vereador
   
  em Moju/PA
</div>
`;

exports[`<CandidacyListItem /> renders without city 1`] = `
<div
  className="candidacy-list-item"
>
  Não eleito
   no 
  1
  ° turno para
   
  Vereador
   
  em Pará
</div>
`;

exports[`<CandidacyListItem /> renders without city and state 1`] = `
<div
  className="candidacy-list-item"
>
  Não eleito
   no 
  1
  ° turno para
   
  Vereador
   
</div>
`;

exports[`<CandidacyListItem /> renders without crashing 1`] = `
<div
  className="candidacy-list-item"
>
  Não eleito
   no 
  1
  ° turno para
   
  Vereador
   
  em Moju/PA
</div>
`;
